--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class='footer'>
             <footer>Phasmophobia is a registered trademark of Kinetic Games. Trademarks are the property of their respective owners. Game materials copyright Kinetic Games. Kinetic Games has not endorsed and is not responsible for this site or its content. October Crow Font by Chad Savage.</footer>
-            <footer style="text-align:center;">SowbugMori 2022</footer>
+            <footer style="text-align:center;">SowbugMori 2022 | View on <a href="https://github.com/SowbugMori/SowbugMori.github.io">Github</a></footer>
         </div>
     </body>
 </html>
