Update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <div class="container">
 
             <div class="header">
+            <a href="https://github.com/SowbugMori/SowbugMori.github.io/issues" class="submit" target="_blank">Submit Challenges</a>
                 <img src="img\logo.png" class="logo">
                 Phasmorandomizer
-                <p class="version">V 1.1</p>
+                <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.1</a>
             </div>
 
             <div class="inputcontent">
