Added alt text to logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="header">
             <a href="https://github.com/SowbugMori/SowbugMori.github.io/issues" class="submit" target="_blank">Submit Challenges</a>
-                <img src="img\logo.png" class="logo">
+                <img src="img\logo.png" class="logo" alt="logo">
                 Phasmorandomizer
                 <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.1</a>
             </div>
