--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -8,12 +8,6 @@
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
         <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-        <style>
-            @font-face {
-            font-family: 'OctoberCrow';
-            src:  url('font/October_Crow.ttf')
-        }
-        </style>
         <py-env>
         - paths:
             - /py/equipment.py
@@ -28,7 +22,7 @@
             <a href="https://github.com/SowbugMori/SowbugMori.github.io/issues" class="submit" target="_blank">Submit Challenges</a>
                 <img src="img\logo.png" class="logo" alt="logo">
                 Phasmorandomizer
-                <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.1</a>
+                <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.2</a>
             </div>
 
             <div class="inputcontent">
