Renamed Challenges and hover css elements added

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <a href="https://github.com/SowbugMori/SowbugMori.github.io/issues" class="submit" target="_blank">Submit Challenges</a>
                 <img src="img\logo.png" class="logo" alt="logo">
                 Phasmorandomizer
-                <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.2</a>
+                <a href="https://github.com/SowbugMori/SowbugMori.github.io/blob/main/changelog.md" class="version" target="_blank">V 1.1.3</a>
             </div>
 
             <div class="inputcontent">
-                Item quantity: <input type="number" step="1" min="0" max="22" maxlength="2" id="quantity-input" size="1" class="inputquantity"/>
+                Item quantity: <input type="number" step="1" min="0" max="22" maxlength="2" id="quantity-input" size="1" class="inputquantity" value="0"/>
                 <div>
                     <button id="get_items" class = "btn btn-primary" type = "submit" pys-onClick="get_items">Randomize Items</button>
                     <button id="get_challenge" class = "btn btn-primary" type = "submit" pys-onClick="get_challenge">Randomize Challenge</button>
